boreal/tests/assets/invalid_files/compilation/non_iterable_identifier.yar
// [error: identifier is not iterable]
import "math"

rule a {
    condition:
        for any a, b in math.mean: (true)
}
